[package]
name = "throne"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.37", features = ["derive"] }
config = "0.15.11"
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.27"
serde = "1.0.219"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.26.2"
tungstenite = "0.26.2"
